Still some formatting and content to add

--- a/src/main/resources/templates/review.html
+++ b/src/main/resources/templates/review.html
@@ -1,23 +1,26 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title th:text="${reviewModel.title}">Review</title>
+    <link rel="stylesheet" href="style.css" />
+    <title th:text="${reviewModel.title} + ' Review'"></title>
 </head>
 <body>
 
 <header>
 
-    <p><a href="/reviews">Reviews</a></p>
+    <h2><a href="/reviews">Homepage</a></h2>
+
 </header>
 
 <main>
     <h1 th:text="${reviewModel.title}"></h1>
-    <p th:text="${reviewModel.reviewCategory}"></p>
-    <p th:text="${reviewModel.content}"></p>
+    <h3 th:text="${reviewModel.category}"></h3>
+    <p  th:text="${reviewModel.content}"></p>
+    <img th:src="${reviewModel.imageURL}">
 </main>
 
 <footer>
-    <small>@copy Nick Billhardt Reviews 2021</small>
+    <small>&COPY; Nick Billhardt Reviews 2021</small>
 </footer>
 
 </body>
